@@ -63,30 +63,92 @@ head{
         display: block;
     }
     * {box-sizing:border-box}
+    
+    .Footer{
+        font-size: 15px;
+        color: rgb(44, 44, 44);
+        padding: 30px;
+        margin: auto;
+        border: 0px;
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #e88282;
+        
+    }
+    .Footer_row_1{
+        font-weight: bold;
+        font-size: 20px;
+        text-align: center;
+        margin: auto;
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
+    .Footer_container{
+        color: rgb(78, 78, 78);
+        text-align: center;
+        padding-left: 200px;
+        padding-right: 200px;
+        margin: auto;
+        text-decoration: none;
+    }
+    #Copyright{
+        text-align: center;
+        font-size: 20px;
+        color: rgb(44, 44, 44);
+        padding-top: 50px;
+        font-weight: bold;
+    }
+    #Body_Title{
+        font-size: 50px;
+        font-weight: bolder;
+        font-family: Arial, Helvetica, sans-serif;
+    }
 </style>
 </head>
 
 <body>
-    <div>
-        <div class="navbar">
-            <a href="homepage.html">home</a>
-            <div class="dropdown">
-              <button class="dropbtn">groupbuys/pre-order
-                <i class="fa fa-caret-down"></i>
-              </button>
-              <div class="dropdown-content">
-                <a href="neo80.html">neo 80</a>
-                <a href="qk80.html">qk80</a>
-                <a href="luminkey80.html">luminkey 80</a>
-                <a href="coming soon.html">more coming soon!</a>
-              </div>
-            </div>
-            <a href="about us.html">about us</a>
-          <a href="contact us.html">contact us</a>
+    <!--Navbar-->
+    <div class="navbar">
+        <a href="homepage.html">Home</a>
+        <div class="dropdown">
+          <button class="dropbtn">Groupbuys/Pre-Order
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="neo80.html">Neo 80</a>
+            <a href="qk80.html">QK80</a>
+            <a href="luminkey80.html">Luminkey 80</a>
+            <a href="coming soon.html">More coming soon!</a>
           </div>
-    </div>
+        </div>
+        <a href="about us.html">About us</a>
+        <a href="contact us.html">Contact us</a>
+    </div> 
     <!--this is a comment-->
     <div>
         <h1>catalog</h1>
+    </div>
+    <!--Footer-->
+    <div class="Footer">
+        <table class="Footer">
+            <tr class="Footer" class="Footer_row_1">
+                <td class="Footer_row_1">Policies</td>
+                <td class="Footer_row_1">Connect with us</td>
+            </tr>
+            <tr class="Footer">
+                <td><a href="TOS.html" class="Footer_container">Terms of service</a></td>
+                <td><a href="contact_us.html" class="Footer_container">Contact Us</a></td>
+            </tr>
+            <tr class="Footer">
+                <td><a href="Policies.html" class="Footer_container">Privacy Policy</a></td>
+                <td><a href="contact_us.html" class="Footer_container">Stores</a></td>
+            </tr>
+            <tr class="Footer">
+                <td><a href="TOS.html" class="Footer_container">Refund Policy</a></td>
+                <td><a href="contact_us.html" class="Footer_container">Careers</a></td>
+            </tr>
+            <tr class="Footer">
+                <td colspan="2"><a id="Copyright">&copy; Fragrance Keebs inc. 2024</a></td>
+            </tr>
+        </table>
     </div>
 </body>
