@@ -197,6 +197,7 @@
 
                         
 <body>
+    <!--Navbar-->
     <div class="navbar">
         <a href="homepage.html">Home</a>
         <div class="dropdown">
@@ -212,12 +213,11 @@
         </div>
         <a href="about us.html">About us</a>
         <a href="contact us.html">Contact us</a>
-     </div> 
+    </div> 
+    <!--Main body container-->
     <div class="Body_Page">
         <br>
         <img src="logo.png" width="20%" height="20%"> <br><br>
-    
-<!--Main body container-->
 <!-- Slideshow container -->
         <div class="slideshow-container">
             <a id="Body_Title">Keyboards on sale:</a>
